feat: add user authentication and registration functionality
- Implemented login and registration server functions with JWT token generation.
- Created user and books database migrations.
- Added new pages for login and not found.
- Updated main SCSS styles and fixed imports in Tailwind.
- Introduced new components for book sections display.
- Enhanced server module structure with authentication and form handling.
- Added TypeScript definitions for WebAssembly integration.

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-DATABASE_URL=postgres://zytch:systemterabyte@127.0.0.1/perpustakaan
+DATABASE_URL=mysql://zytch:systemterabyte@127.0.0.1/perpustakaan
+
+LEPTOS_SITE_ROOT=site/
+LEPTOS_SITE_PKG_DIR=includes/
+LEPTOS_SITE_ADDR=0.0.0.0:3030
