feat: add admin dashboard and layout components
- Implemented `StatsCard` component for displaying statistics with icons and trends.
- Created `TableCard` component for displaying tabular data.
- Developed `AdminLayout` for the admin section, including a sidebar and top bar.
- Added `AdminDashboardPage` to aggregate and display stats, charts, and tables.
- Introduced `BookDetails` and `HomePage` components for member pages, showcasing book details and trending sections.
- Implemented registration page with form handling and validation.
- Added authentication middleware for session management and user validation.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,19 @@
     "rust-analyzer.cachePriming.enable": false,
     "rust-analyzer.cachePriming.numThreads": "physical",
     "tailwindCSS.includeLanguages": {
-        "Rust": "html"
+        "rust": "html",
+        "rs": "html",
+        "*.rs": "html"
     },
+    "rust-analyzer.cargo.buildScripts.enable": false,
+    "rust-analyzer.procMacro.enable": false,
+    "files.associations": {
+        "*.rs": "rust"
+    },
+    "editor.quickSuggestions": {
+        "comments": "on",
+        "strings": "on"
+    },
+    "rust-analyzer.inlayHints.chainingHints.enable": false,
+    "rust-analyzer.inlayHints.closingBraceHints.enable": false,
 }
