--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 DATABASE_URL=mysql://user:password@127.0.0.1/db_name
 
-LEPTOS_SITE_ROOT=site/
-LEPTOS_SITE_PKG_DIR=includes/
-LEPTOS_SITE_ADDR=0.0.0.0:3030
+LEPTOS_OUTPUT_NAME=bookflix
+LEPTOS_SITE_ROOT=site
