--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "perpustakaan"
+name = "bookflix"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -14,16 +14,18 @@ console_error_panic_hook = { version = "0.1", optional = true }
 leptos_axum = { version = "0.8.0", optional = true }
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 leptos_meta = { version = "0.8.0" }
-wasm-bindgen = { version = "=0.2.105", optional = true }
+wasm-bindgen = { version = "=0.2.106", optional = true }
 sqlx = {version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "migrate"], optional = true}
-dotenv = { version = "0.14.1", optional = true }
 bcrypt = { version = "0.17.1", optional = true }
-jsonwebtoken = { version = "9.2.0", optional = true}
 serde = { version = "1.0.228", optional = true, features = ['derive']}
 serde_json = { version = "1.0.145", optional = true }
-chrono = { version = "0.4.42", optional = true, features = ['serde']}
-tower = { version = "0.5.2", optional = true }
-tower-http = { version = "0.6.7", optional = true }
+rand = { version = "0.9.2", optional = true }
+base64 = { version = "0.22.1", optional = true }
+web-sys = "0.3.83"
+dotenvy = { version = "0.15.7", optional = true }
+axum-extra = { version = "0.12.2", optional = true, features = ["cookie"] }
+time = { version = "0.3.44", features = ["serde"], optional = true }
+moka = { version = "0.12.11", features = ["future"], optional = true }
 
 [features]
 hydrate = [
@@ -36,25 +38,19 @@ ssr = [
     "dep:tokio",
     "dep:leptos_axum",
     "dep:sqlx",
-    "dep:dotenv",
+    "dep:dotenvy",
     "dep:bcrypt",
-    "dep:jsonwebtoken",
     "dep:serde",
     "dep:serde_json",
-    "dep:chrono",
-    "dep:tower",
-    "dep:tower-http",
+    "dep:rand",
+    "dep:base64",
+    "dep:axum-extra",
+    "dep:time",
+    "dep:moka",
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
 ]
-bcrypt = ["dep:bcrypt"]
-jsonwebtoken = ["dep:jsonwebtoken"]
-serde = ["dep:serde"]
-serde_json = ["dep:serde_json"]
-chrono = ["dep:chrono"]
-tower = ["dep:tower"]
-tower-http = ["dep:tower-http"]
 
 # Defines a size-optimized profile for the WASM bundle in release mode
 [profile.wasm-release]
@@ -62,11 +58,12 @@ inherits = "release"
 opt-level = 'z'
 lto = true
 codegen-units = 1
+strip = true
 panic = "abort"
 
 [package.metadata.leptos]
 # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
-output-name = "perpustakaan"
+output-name = "bookflix"
 
 # The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
 site-root = "target/site"
